fix(MenuGroup): add 1 px letter spacing to menu group label
affects: @entur/menu

--- a/packages/menu/src/styles.scss
+++ b/packages/menu/src/styles.scss
@@ -118,6 +118,7 @@
   display: flex;
   font-size: $font-sizes-medium;
   justify-content: space-between;
+  letter-spacing: 1px;
   line-height: $line-heights-medium;
   padding: $space-small 0 $space-small $space-default;
   margin: 0;
